--- a/about_us.html
+++ b/about_us.html
@@ -59,7 +59,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="LogInpage.html">Login</a>
-                        <<div class="btn-group dropleft" style="margin-top: 2px" hidden>
+                        <div class="btn-group dropleft" style="margin-top: 2px" hidden>
                             <a class="btn btn-secondary dropdown-toggle account_btn" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown">
                                 Account
                             </a>
