--- a/feedback_page.html
+++ b/feedback_page.html
@@ -98,10 +98,13 @@
                 <p class="p_email">customer.email@mail.fi</p>
                 <hr class="hr_account"></hr>
                 <div class="account_block_bnt">
-                    <a href="main.html" class="account_block_link">Back to shop</a>
+                    <a href="my_orders.html" class="account_block_link">Order History</a>
                 </div>
                 <div class="account_block_bnt">
                     <a href="change_customer_ac.html" class="account_block_link">Edit Account</a>
+                </div>
+                <div class="account_block_bnt">
+                    <a href="main.html" class="account_block_link">Back to shop</a>
                 </div>
                 <div class="account_block_bnt">
                     <a href="#" class="account_block_link">Log out</a>
